--- a/caitodo/index.html
+++ b/caitodo/index.html
@@ -8,13 +8,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
 <style>
 :root{
-  --bg:#1A1A1A;--bg2:#222222;--bg3:#2A2A2A;--bg4:#303030;
-  --panel:#242424;--border:#363636;--border2:#424242;
-  --text:#E8E8E6;--dim:#A8A8A6;--muted:#686866;--bright:#F0F0EE;
-  --urgent-bg:#2A1E12;--urgent-bd:#7A5830;--urgent-text:#D4943A;
-  --blocked-bg:#1E1428;--blocked-bd:#6040A0;--blocked-text:#A880E0;
-  --remit-bg:#122030;--remit-bd:#3060A0;--remit-text:#60A0D8;
-  --green:#4A9C6A;--radius:12px;--radius-xs:6px;
+  --bg:#111111;--bg2:#191919;--bg3:#232323;--bg4:#2B2B2B;
+  --panel:#161616;--border:#2A2A2A;--border2:#363636;
+  --text:#D4D4D2;--dim:#8A8A88;--muted:#505050;--bright:#F0F0EE;
+  --urgent-bg:#161008;--urgent-bd:#5C3C18;--urgent-text:#AE7838;
+  --remit-bg:#141008;--remit-bd:#504028;--remit-text:#9A8050;
+  --blocked-bg:#0A1418;--blocked-bd:#1E3040;--blocked-text:#5A7A90;
+  --green:#489A68;--green-dim:#0C1E14;--radius:12px;--radius-xs:6px;
 }
 *{box-sizing:border-box;margin:0;padding:0}
 html{scroll-behavior:smooth}
@@ -39,44 +39,44 @@ header{display:flex;align-items:center;justify-content:space-between;padding:0 2
 .sum-bdg.done{color:var(--muted);opacity:.7}
 .sum-ts{margin-left:auto;font-size:9px;color:var(--muted);font-family:"JetBrains Mono",monospace}
 main{max-width:860px;margin:0 auto;padding:22px 24px;display:flex;flex-direction:column;gap:10px}
-.sec-lbl{font-size:9px;letter-spacing:2px;font-weight:700;color:var(--muted);text-transform:uppercase;margin-bottom:10px;display:flex;align-items:center;gap:12px;font-family:"JetBrains Mono",monospace;}
+.sec-lbl{font-size:10px;letter-spacing:1.5px;font-weight:700;color:var(--muted);text-transform:uppercase;margin-bottom:10px;display:flex;align-items:center;gap:12px;font-family:"JetBrains Mono",monospace;}
 .sec-lbl::after{content:"";flex:1;height:1px;background:var(--border)}
 .task-card{background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);padding:14px 16px;display:flex;flex-direction:column;gap:8px;transition:border-color .15s;}
 .task-card:hover{border-color:var(--border2)}
 .task-card.urgent-card{border-color:var(--urgent-bd);background:var(--urgent-bg)}
 .task-card.blocked-card{border-color:var(--blocked-bd);background:var(--blocked-bg)}
 .tc-top{display:flex;align-items:flex-start;justify-content:space-between;gap:12px}
-.tc-title{font-size:13px;font-weight:500;color:var(--bright);line-height:1.45;flex:1}
+.tc-title{font-size:15px;font-weight:500;color:var(--bright);line-height:1.45;flex:1}
 .tc-tags{display:flex;gap:5px;flex-shrink:0;flex-wrap:wrap;justify-content:flex-end}
-.tag{font-size:9px;padding:2px 8px;border-radius:20px;white-space:nowrap;font-weight:500}
+.tag{font-size:10px;padding:3px 9px;border-radius:20px;white-space:nowrap;font-weight:500}
 .tag-pri{border:1px solid var(--border);color:var(--dim);background:var(--bg3)}
 .tag-pri.urgent{border-color:var(--urgent-bd);color:var(--urgent-text);background:var(--urgent-bg)}
 .tag-pri.important{border-color:var(--border2);color:var(--text);background:var(--bg4)}
 .tag-type{background:var(--bg4);color:var(--dim);border:1px solid var(--border)}
-.tag-type.alert{background:#1A2E1A;color:var(--green);border-color:#2A4A2A}
+.tag-type.alert{background:var(--green-dim);color:var(--green);border-color:#183C24}
 .tag-type.remittance{background:var(--remit-bg);color:var(--remit-text);border-color:var(--remit-bd)}
 .tag-status{border:1px solid var(--border);color:var(--dim);background:var(--bg3)}
 .tag-status.blocked{border-color:var(--blocked-bd);color:var(--blocked-text);background:var(--blocked-bg)}
 .tag-status.done{color:var(--muted);opacity:.6}
-.tc-meta{display:flex;gap:16px;font-size:10px;color:var(--dim)}
+.tc-meta{display:flex;gap:16px;font-size:12px;color:var(--dim)}
 .tc-meta-item{display:flex;align-items:center;gap:4px}
-.tc-meta-lbl{font-size:9px;color:var(--muted)}
-.tc-blocked{font-size:10px;color:var(--blocked-text);background:var(--blocked-bg);border:1px solid var(--blocked-bd);border-radius:var(--radius-xs);padding:5px 10px;}
-.tc-next{font-size:10px;color:var(--dim);background:var(--bg3);border-radius:var(--radius-xs);padding:5px 10px;border:1px solid var(--border);}
+.tc-meta-lbl{font-size:10px;color:var(--muted)}
+.tc-blocked{font-size:12px;color:var(--blocked-text);background:var(--blocked-bg);border:1px solid var(--blocked-bd);border-radius:var(--radius-xs);padding:5px 10px;}
+.tc-next{font-size:12px;color:var(--dim);background:var(--bg3);border-radius:var(--radius-xs);padding:5px 10px;border:1px solid var(--border);}
 .grp{margin-bottom:8px}
-.loading-wrap{text-align:center;padding:60px 0;font-size:12px;color:var(--muted)}
+.loading-wrap{text-align:center;padding:60px 0;font-size:13px;color:var(--muted)}
 
 @media(max-width:1024px){
-  .hdr-name{font-size:17px}.hdr-sub{font-size:14px}.hdr-clock{font-size:15px}
-  .back-btn{font-size:16px}.sum-bar{font-size:15px}.sec-lbl{font-size:13px}
-  .tc-title{font-size:18px}.tc-meta{font-size:15px}.tc-meta-lbl{font-size:13px}
+  .hdr-name{font-size:18px}.hdr-sub{font-size:14px}.hdr-clock{font-size:15px}
+  .back-btn{font-size:16px}.sum-bar{font-size:15px}.sec-lbl{font-size:13px;letter-spacing:1.5px}
+  .tc-title{font-size:19px}.tc-meta{font-size:15px}.tc-meta-lbl{font-size:13px}
   .tc-next,.tc-blocked{font-size:15px;line-height:1.7}.tag{font-size:14px;padding:3px 10px}
-  .loading-wrap{font-size:15px}
+  .loading-wrap{font-size:16px}
 }
 @media(max-width:640px){
   header{padding:0 16px}.sum-bar{padding:0 16px}.main{padding:14px 16px}
   .tc-top{flex-direction:column;gap:6px}.tc-tags{justify-content:flex-start}
-  .tc-title{font-size:19px;line-height:1.5}.tc-meta{font-size:16px}
+  .tc-title{font-size:20px;line-height:1.5}.tc-meta{font-size:16px}
   .tc-meta-lbl{font-size:14px}.tc-next,.tc-blocked{font-size:16px;line-height:1.8}
   .tag{font-size:15px;padding:4px 11px}
 }
